add #3 & more report & table sortable

--- a/locales/en.json
+++ b/locales/en.json
@@ -89,5 +89,7 @@
 	"Solution": "Solution",
 	"Problem": "Problem",
 	"Solution Description": "Solution Description",
-	"Recent Comments": "Recent Comments"
+	"Recent Comments": "Recent Comments",
+	"Recent Submission": "Recent Submission",
+	"Report": "Report"
 }
