add login message & testdata set view link

--- a/locales/en.json
+++ b/locales/en.json
@@ -91,5 +91,6 @@
 	"Solution Description": "Solution Description",
 	"Recent Comments": "Recent Comments",
 	"Recent Submission": "Recent Submission",
-	"Report": "Report"
+	"Report": "Report",
+	"Subtask": "Subtask"
 }
