add suffix title

--- a/locales/en.json
+++ b/locales/en.json
@@ -92,5 +92,6 @@
 	"Recent Comments": "Recent Comments",
 	"Recent Submission": "Recent Submission",
 	"Report": "Report",
-	"Subtask": "Subtask"
+	"Subtask": "Subtask",
+	"Judge Girl": "Judge Girl"
 }
