add student score page

--- a/locales/en.json
+++ b/locales/en.json
@@ -93,5 +93,8 @@
 	"Recent Submission": "Recent Submission",
 	"Report": "Report",
 	"Subtask": "Subtask",
-	"Judge Girl": "Judge Girl"
+	"Judge Girl": "Judge Girl",
+	"U": "U",
+	"New Scores": "New Scores",
+	"Exam Title": "Exam Title"
 }
