add grade record exam title page

--- a/locales/en.json
+++ b/locales/en.json
@@ -96,5 +96,9 @@
 	"Judge Girl": "Judge Girl",
 	"U": "U",
 	"New Scores": "New Scores",
-	"Exam Title": "Exam Title"
+	"Exam Title": "Exam Title",
+	"Add Exam Title": "Add Exam Title",
+	"Change Exam Title": "Change Exam Title",
+	"Grade ID": "Grade ID",
+	"Grade Title": "Grade Title"
 }
