add chinese font, not perfect on Firefox

--- a/locales/zhtw.json
+++ b/locales/zhtw.json
@@ -92,5 +92,6 @@
 	"Problem": "題目",
 	"Report": "報告",
 	"Subtask": "Subtask",
-	"Judge Girl": "批改娘"
+	"Judge Girl": "批改娘",
+	"Recent Submission": "Recent Submission"
 }
