mysql module & view component fold

--- a/locales/en.json
+++ b/locales/en.json
@@ -100,5 +100,7 @@
 	"Add Exam Title": "Add Exam Title",
 	"Change Exam Title": "Change Exam Title",
 	"Grade ID": "Grade ID",
-	"Grade Title": "Grade Title"
+	"Grade Title": "Grade Title",
+	"Recent Update": "Recent Update",
+	"#AC": "#AC"
 }
