--- a/locales/en.json
+++ b/locales/en.json
@@ -102,5 +102,11 @@
 	"Grade ID": "Grade ID",
 	"Grade Title": "Grade Title",
 	"Recent Update": "Recent Update",
-	"#AC": "#AC"
+	"#AC": "#AC",
+	"AC": "AC",
+	"Solved List": "Solved List",
+	"Announcement": "Announcement",
+	"Grade": "Grade",
+	"Upload Avatar": "Upload Avatar",
+	"Domain": "Domain"
 }
