locales add words

--- a/locales/en.json
+++ b/locales/en.json
@@ -108,5 +108,48 @@
 	"Announcement": "Announcement",
 	"Grade": "Grade",
 	"Upload Avatar": "Upload Avatar",
-	"Domain": "Domain"
+	"Domain": "Domain",
+	"Sign up": "Sign up",
+	"Lang": "Lang",
+	"Theme": "Theme",
+	"Default": "Default",
+	"Dark": "Dark",
+	"Submission": "Submission",
+	"Update page each 60 seconds": "Update page each 60 seconds",
+	"Take your passion and make it come true.": "Take your passion and make it come true.",
+	"Enter your student ID": "Enter your student ID",
+	"Forgot password?": "Forgot password?",
+	"Create an account.": "Create an account.",
+	"My Progress": "My Progress",
+	"My Score": "My Score",
+	"If you only do what you can do, you'll never be more than you are now.": "If you only do what you can do, you'll never be more than you are now.",
+	"The C Programming": "The C Programming",
+	"Parallel Programming": "Parallel Programming",
+	"Data Structures and Algorithms": "Data Structures and Algorithms",
+	"Lab332 Training": "Lab332 Training",
+	"You have to believe in yourself. That's the secret of success.": "You have to believe in yourself. That's the secret of success.",
+	"Subdomains": "Subdomains",
+	"Problem List": "Problem List",
+	"I'm a slow walker, but I never walk backwards.": "I'm a slow walker, but I never walk backwards.",
+	"Source": "Source",
+	"Live Submission": "Live Submission",
+	"Auto update": "Auto update",
+	"I'm not the best but I'm trying my best.": "I'm not the best but I'm trying my best.",
+	"Progress Report": "Progress Report",
+	"Site Statistics": "Site Statistics",
+	"Contest comming soon.": "Contest comming soon.",
+	"Score Distribution": "Score Distribution",
+	"Score Table": "Score Table",
+	"Retype your password": "Retype your password",
+	"Email": "Email",
+	"Registration Key": "Registration Key",
+	"How do I get a registration key ?": "How do I get a registration key ?",
+	"Strong": "Strong",
+	"Exam": "Exam",
+	"Note": "Note",
+	"Reference": "Reference",
+	"Refer Problem ID": "Refer Problem ID",
+	"Contest Rule": "Contest Rule",
+	"Examination in progress": "Examination in progress",
+	"Pwd": "Pwd"
 }
