--- a/locales/zhtw.json
+++ b/locales/zhtw.json
@@ -93,5 +93,47 @@
 	"Report": "報告",
 	"Subtask": "Subtask",
 	"Judge Girl": "批改娘",
-	"Recent Submission": "Recent Submission"
+	"Recent Submission": "Recent Submission",
+	"Sign up": "Sign up",
+	"Lang": "Lang",
+	"Theme": "Theme",
+	"Default": "Default",
+	"Dark": "Dark",
+	"Take your passion and make it come true.": "Take your passion and make it come true.",
+	"Recent Update": "Recent Update",
+	"Enter your student ID": "Enter your student ID",
+	"Forgot password?": "Forgot password?",
+	"Create an account.": "Create an account.",
+	"Live Submission": "Live Submission",
+	"Auto update": "Auto update",
+	"My Progress": "My Progress",
+	"My Score": "My Score",
+	"Solved List": "Solved List",
+	"Score Distribution": "Score Distribution",
+	"Score Table": "Score Table",
+	"Domain": "Domain",
+	"If you only do what you can do, you'll never be more than you are now.": "If you only do what you can do, you'll never be more than you are now.",
+	"The C Programming": "The C Programming",
+	"Parallel Programming": "Parallel Programming",
+	"Data Structures and Algorithms": "Data Structures and Algorithms",
+	"Lab332 Training": "Lab332 Training",
+	"You have to believe in yourself. That's the secret of success.": "You have to believe in yourself. That's the secret of success.",
+	"Subdomains": "Subdomains",
+	"Problem List": "Problem List",
+	"I'm a slow walker, but I never walk backwards.": "I'm a slow walker, but I never walk backwards.",
+	"Source": "Source",
+	"I'm not the best but I'm trying my best.": "I'm not the best but I'm trying my best.",
+	"Progress Report": "Progress Report",
+	"Site Statistics": "Site Statistics",
+	"#AC": "#AC",
+	"Submission": "Submission",
+	"Update page each 60 seconds": "Update page each 60 seconds",
+	"Contest comming soon.": "Contest comming soon.",
+	"Examination in progress": "Examination in progress",
+	"Retype your password": "Retype your password",
+	"Email": "Email",
+	"Registration Key": "Registration Key",
+	"How do I get a registration key ?": "How do I get a registration key ?",
+	"Upload Avatar": "Upload Avatar",
+	"Strong": "Strong"
 }
