--- a/locales/zhtw.json
+++ b/locales/zhtw.json
@@ -58,7 +58,7 @@
 	"My Status": "提交狀況",
 	"Running": "進行中",
 	"Closed": "已關閉",
-	"Comming": "即將開放",
+	"Coming": "即將開放",
 	"Notice": "注意事項",
 	"User": "使用者",
 	"#Solved List": "已解決清單",
@@ -128,7 +128,7 @@
 	"#AC": "#AC",
 	"Submission": "Submission",
 	"Update page each 60 seconds": "Update page each 60 seconds",
-	"Contest comming soon.": "Contest comming soon.",
+	"Contest coming soon.": "Contest coming soon.",
 	"Examination in progress": "Examination in progress",
 	"Retype your password": "Retype your password",
 	"Email": "Email",
