Add API DELETE /guild/:gid/clear.

--- a/locales/zhtw.json
+++ b/locales/zhtw.json
@@ -135,5 +135,8 @@
 	"Registration Key": "Registration Key",
 	"How do I get a registration key ?": "How do I get a registration key ?",
 	"Upload Avatar": "Upload Avatar",
-	"Strong": "Strong"
+	"Strong": "Strong",
+	"Grade": "Grade",
+	"Exam": "Exam",
+	"Note": "Note"
 }
