determine visibility of submissions by whether the user who send the request is admin, strong or others

--- a/locales/zhtw.json
+++ b/locales/zhtw.json
@@ -138,5 +138,10 @@
 	"Strong": "Strong",
 	"Grade": "Grade",
 	"Exam": "Exam",
-	"Note": "Note"
+	"Note": "Note",
+	"Reference": "Reference",
+	"Refer Problem ID": "Refer Problem ID",
+	"Contest Rule": "Contest Rule",
+	"Pwd": "Pwd",
+	"New Scores": "New Scores"
 }
