Add average cyclomatic number into contest table.

--- a/locales/en.json
+++ b/locales/en.json
@@ -152,5 +152,5 @@
 	"Contest Rule": "Contest Rule",
 	"Examination in progress": "Examination in progress",
 	"Pwd": "Pwd",
-	"Coming": "Coming"
+	"Average Cyclomatic Number": "Average Cyclomatic Number"
 }
