--- a/locales/zhtw.json
+++ b/locales/zhtw.json
@@ -143,5 +143,6 @@
 	"Refer Problem ID": "Refer Problem ID",
 	"Contest Rule": "Contest Rule",
 	"Pwd": "Pwd",
-	"New Scores": "New Scores"
+	"New Scores": "New Scores",
+	"Average Cyclomatic Number(C)": "Average Cyclomatic Number(C)"
 }
