Add option of cyclomatic complexity when creating problem.

--- a/locales/en.json
+++ b/locales/en.json
@@ -153,5 +153,6 @@
 	"Examination in progress": "Examination in progress",
 	"Pwd": "Pwd",
 	"Average Cyclomatic Number": "Average Cyclomatic Number",
-	"Average Cyclomatic Number(C)": "Average Cyclomatic Number(C)"
+	"Average Cyclomatic Number(C)": "Average Cyclomatic Number(C)",
+	"Cyclomatic Complexity": "Cyclomatic Complexity"
 }
